--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,13 +7,13 @@
         <a href="/carte" class="btn-primary">Découvrir la carte</a>
     </div>
     <div class="img">
-        <img src="/image 23.webp" alt="">
+        <img src="/image 23.webp" alt="" width="512px" height="512px">
     </div>
 </section>
 
 <div class="section">
     <div class="img">
-        <img src="/biere.webp" alt="">
+        <img src="/biere.webp" alt="" width="512px" height="512px">
     </div>
     <div class="content">
         <h2>Découvre la bière faite pour toi</h2>
@@ -25,7 +25,7 @@
 
 <div class="product-features section reverse">
     <div class="img">
-        <img src="/atelier.webp" alt="Façade du bar le Raising Hops">
+        <img src="/atelier.webp" alt="Façade du bar le Raising Hops" width="512px" height="512px">
     </div>
     <div class="content">
         <h2>Un bar à bières au coeur de Lille</h2>
@@ -35,13 +35,13 @@
             <li>Ligne de bus 14, 15, 18, L5 (1min à pieds)</li>
             <li>Place de stationnement place Jacquard</li>
         </ul>
-        <a href="" class="btn-primary">Voir sur Google Maps</a>
+        <a href="https://www.google.fr/maps/place/24+Rue+Jeanne+Maillotte,+59800+Lille/@50.6315809,3.0615031,17z/data=!3m1!4b1!4m6!3m5!1s0x47c2d58f0b1e98d7:0xa6f69a4ef2b162c2!8m2!3d50.6315809!4d3.0640834!16s%2Fg%2F11c28zch8w?entry=ttu" class="btn-primary">Voir sur Google Maps</a>
     </div>
 </div>
 
 <div class="opening-hours section" id="horaires">
     <div class="img">
-        <img src="/lieu.webp" alt="">
+        <img src="/lieu.webp" alt="" width="512px" height="512px">
     </div>
     <div class="content">
         <h2>Nos horaires d’ouverture</h2>
@@ -77,7 +77,7 @@
 
 <div class="contact section reverse" id="contact">
     <div class="img">
-        <img src="/contact.webp" alt="Photo de la cave du Raising Hops">
+        <img src="/contact.webp" alt="Photo de la cave du Raising Hops" width="512px" height="512px">
     </div>
     <div class="content">
         <h2>Nous contacter</h2>
