--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
         <a href="/carte" class="btn-primary">Découvrir la carte</a>
     </div>
     <div class="img">
-        <img src="/image 23.webp" alt="" width="512px" height="512px">
+        <img src="/hero.webp" alt="" width="512px" height="512px">
     </div>
 </section>
 
