--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,8 @@
 
 <section class="hero">
     <div class="content">
-        <h1>Raising Hops</h1>
-        <p>Le nouveau bar lillois dédié à la (re)découverte de la bière, avec un large choix de bières artisanales et locales.</p>
+        <h1>Le Raising Hops</h1>
+        <p>Le nouveau bar lillois dédié à la <em>(re)</em>découverte de la bière, avec un large choix de bières artisanales et locales.</p>
         <a href="/carte" class="btn-primary">Découvrir la carte</a>
     </div>
     <div class="img">
