--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,13 +7,13 @@
         <a href="/carte" class="btn-primary">Découvrir la carte</a>
     </div>
     <div class="img">
-        <img src="/hero.webp" alt="" width="512px" height="512px">
+        <img src="/hero.webp" alt="La façade du Raising Hops" width="512px" height="512px">
     </div>
 </section>
 
 <div class="section">
     <div class="img">
-        <img src="/biere.webp" alt="" width="512px" height="512px" loading="lazy">
+        <img src="/biere.webp" alt="Le comptoir du Raising Hops" width="512px" height="512px" loading="lazy">
     </div>
     <div class="content">
         <h2>Découvre la bière faite pour toi</h2>
@@ -25,7 +25,7 @@
 
 <div class="product-features section reverse">
     <div class="img">
-        <img src="/atelier.webp" alt="Façade du bar le Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/atelier.webp" alt="La salle du Raising Hops" width="512px" height="512px" loading="lazy">
     </div>
     <div class="content">
         <h2>Un bar à bières au coeur de Lille</h2>
@@ -41,7 +41,7 @@
 
 <div class="opening-hours section" id="horaires">
     <div class="img">
-        <img src="/lieu.webp" alt="" width="512px" height="512px" loading="lazy">
+        <img src="/lieu.webp" alt="Les horaires du Raising Hops" width="512px" height="512px" loading="lazy">
     </div>
     <div class="content">
         <h2>Nos horaires d’ouverture</h2>
@@ -77,12 +77,12 @@
 
 <div class="contact section reverse" id="contact">
     <div class="img">
-        <img src="/contact.webp" alt="Photo de la cave du Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/contact.webp" alt="La cave du Raising Hops" width="512px" height="512px" loading="lazy">
     </div>
     <div class="content">
         <h2>Nous contacter</h2>
         <p>Un anniversaire, un afterwork, pôt de thèse ou autre chose à fêter ?</p>
-        <p>Privatise notre cave pouvant accueillir jusqu’à 20 personnes !</p>
+        <p>Privatisez notre cave pouvant accueillir jusqu’à 20 personnes !</p>
         <a href="mailto:hey@raisinghops.fr?subject=Demande de réservation" class="btn-primary">Réserver une table</a>
     </div>
 </div>
