Update robots.txt and SEO

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="main-header">
 	<div class="wrapper">
 		<a href="{{ .Site.BaseURL }}" class="logo-link">
-			<img src="/favicon.svg" alt="Logo" class="logo-img" width="40px" height="40px">
+			<img src="/favicon.svg" alt="Logo" class="logo-img" width="40px" height="40px" title="Logo">
 		</a>
 		<nav class="navigation" hidden>
 			<div class="nav-item"><a href="{{ .Site.BaseURL }}">Accueil</a></div>
