--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="footer">
+    <a rel="me" href="https://mastodon.beer/@raisinghops">Mastodon</a>
     <p class="copyright">© {{ now.Year }} Raising Hops – Fall in love with beer again. - <a href="/mentions-legales">Mentions légales</a></p>
 </footer>
