--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,7 +353,7 @@ a {
 
 .post-thumbnail {
     background-color: var(--bg-secondary);
-    border-radius: 0 0 24px 24px;
+    border-radius: 24px;
 }
 
 .post-thumbnail .thumbnail-cover {
