--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,3 +11,48 @@
 {{- with resources.Get "js/main.js" }}
       <script src="{{ .RelPermalink }}"></script>
 {{- end }}
+
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BarOrPub",
+    "name": "Raising Hops",
+    "url": "https://raisinghops.fr",
+    "telephone": "",
+    "menu": "https://raisinghops.fr/carte",
+    "acceptsReservations": "true",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "24 rue Jeanne Maillotte",
+      "addressLocality": "Lille",
+      "postalCode": "59800",
+      "addressCountry": "FR"
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Tuesday",
+        "Wednesday"
+      ],
+      "opens": "16:00",
+      "closes": "00:00"
+    },{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "16:00",
+      "closes": "01:00"
+    },{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": "Saturday",
+      "opens": "15:00",
+      "closes": "02:00"
+    }],
+    "sameAs": [
+      "https://www.facebook.com/raisinghops",
+      "https://www.instagram.com/raising.hops/"
+    ] 
+  }
+  </script>
