--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="content">
         <h2>Découvre la bière faite pour toi</h2>
-        <p>Le Raising Hops vous propose 12 pressions (dont 3 éphémères) et une quarantaine de références en bouteilles et canettes.</p>
+        <p>Le bar vous propose 12 pressions (dont 3 éphémères) et une quarantaine de références en bouteilles et canettes.</p>
         <p>Bar à bières, nous proposons également des softs, cocktails, saucisson et tartinables.</p>
         <a href="/carte" class="btn-primary">Voir la carte</a>
     </div>
