--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,8 @@
 <footer class="footer">
-    <a rel="me" href="https://mastodon.beer/@raisinghops">Mastodon</a>
+    <div class="social-list">
+        <a rel="me" href="https://mastodon.beer/@raisinghops">Mastodon</a>
+        <a href="https://instagram.com/raising.hops">Instagram</a>
+        <a href="https://facebook.com/raisinghops">Facebook</a>
+    </div>
     <p class="copyright">© {{ now.Year }} Raising Hops – Fall in love with beer again. - <a href="/mentions-legales">Mentions légales</a></p>
 </footer>
