--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,10 +102,16 @@ blockquote p {
 /* Navigation bar */
 
 .main-header {
+    background-color: rgba(255,252,239,0.7);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 1rem 1.5rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: var(--margin-24) var(--margin-24) 0;
 }
 
 .wrapper {
@@ -126,16 +132,15 @@ blockquote p {
 }
 
 .navigation {
-	background-color: #fffcef;
 	list-style-type: none;
-
+    background-color: var(--bg-primary);
 	position: fixed;
 	top: 0;
 	left: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 48px;
+	gap: calc(40rem / 16);
 	width: 100%;
 	height: 100dvh;
 	padding-left: 24px;
@@ -176,6 +181,7 @@ blockquote p {
 
 @media screen and (min-width: 850px) {
 	.navigation {
+        background-color: inherit;
         position: relative;
 		flex-direction: row;
 		justify-content: end;
@@ -523,10 +529,6 @@ tr:nth-child(even) td {
 tr:nth-child(2n+1) td {
     font-weight: 700;
 }
-
-
-
-
 
 /* More */
 
