--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
 
 <div class="section">
     <div class="img">
-        <img src="/biere.webp" alt="Le comptoir du Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/biere.webp" alt="Le comptoir du Raising Hops" width="512px" height="512px" loading="lazy" class="scroll-animation">
     </div>
     <div class="content">
         <h2>Découvre la bière faite pour toi</h2>
@@ -25,7 +25,7 @@
 
 <div class="product-features section reverse">
     <div class="img">
-        <img src="/atelier.webp" alt="La salle du Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/atelier.webp" alt="La salle du Raising Hops" width="512px" height="512px" loading="lazy" class="scroll-animation">
     </div>
     <div class="content">
         <h2>Un bar à bières au coeur de Lille</h2>
@@ -41,7 +41,7 @@
 
 <div class="opening-hours section" id="horaires">
     <div class="img">
-        <img src="/lieu.webp" alt="Les horaires du Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/lieu.webp" alt="Les horaires du Raising Hops" width="512px" height="512px" loading="lazy" class="scroll-animation">
     </div>
     <div class="content">
         <h2>Nos horaires d’ouverture</h2>
@@ -77,7 +77,7 @@
 
 <div class="contact section reverse" id="contact">
     <div class="img">
-        <img src="/contact.webp" alt="La cave du Raising Hops" width="512px" height="512px" loading="lazy">
+        <img src="/contact.webp" alt="La cave du Raising Hops" width="512px" height="512px" loading="lazy" class="scroll-animation">
     </div>
     <div class="content">
         <h2>Nous contacter</h2>
