--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,5 +4,5 @@
         <a href="https://instagram.com/raising.hops">Instagram</a>
         <a href="https://facebook.com/raisinghops">Facebook</a>
     </div>
-    <p class="copyright">© {{ now.Year }} Raising Hops – Fall in love with beer again. - <a href="/mentions-legales">Mentions légales</a></p>
+    <p class="copyright">© {{ now.Year }} Raising Hops – Fall in love with beer again. - <a href="/mentions-legales/">Mentions légales</a></p>
 </footer>
