--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,9 +5,9 @@
 		</a>
 		<nav class="navigation" hidden>
 			<div class="nav-item"><a href="{{ .Site.BaseURL }}">Accueil</a></div>
-			<div class="nav-item"><a href="/carte">La carte</a></div>
+			<div class="nav-item"><a href="/carte/">La carte</a></div>
 			<div class="nav-item"><a href="{{ .Site.BaseURL }}#horaires">Horaires</a></div>
-			<div class="nav-item"><a href="/blog">Actualités</a></div>
+			<div class="nav-item"><a href="/blog/">Actualités</a></div>
 			<div class="nav-item"><a href="{{ .Site.BaseURL }}#contact">Contact</a></div>
 		</nav>
 		<button aria-expanded="false" aria-controls="menu" class="menu">
