--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <section class="list">
     <header class="list-header">
-        <h1>{{.Title}}</h1>
+        <h1>L'actualité du Raising Hops</h1>
         <p>{{.Description}}</p>
     </header>
 
