--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,7 @@ body {
 .scroll-animation {
     opacity: 0;
     transform: translateY(20%);
-    transition: opacity 0.5s ease, transform 0.5s ease-in-out;
+    transition: opacity .8s ease, transform .8s ease;
 }
 
 /* Typography */
